--- a/src/app/pages/resourcepack/resourcepack.component.html
+++ b/src/app/pages/resourcepack/resourcepack.component.html
@@ -1,21 +1,17 @@
 <div class="container p-3">
   <div class="row mb-5">
     <div class="col">
-      <h2>
-        Download all this packs from Xisumavoid's <a href="https://vanillatweaks.net" target="_blank">Vanilla
-          Tweaks</a>.
-      </h2><br>
-      <h5>
-        Download this specific pack <a href="http://25.3.0.72:3000/rsspack">here</a>.
-      </h5>
+      <h2>Download custom packs from <a href="https://vanillatweaks.net" target="_blank">Vanilla
+          Tweaks</a>.</h2><br>
+      <h5>Download this specific pack <a href="{{downloadurl}}/rsspack">here</a>.</h5>
     </div>
   </div>
   <div class="row row-cols-5">
-    <div class="col pb-3" *ngFor="let item of data">
+    <div class="col pb-3" *ngFor="let item of apidata">
       <div class="card text-center">
-        <img src="assets/{{item}}.png" class="card-img-top p-3">
+        <img src="{{imageurl}}/rsspacks/{{item.filename}}.png" class="card-img-top p-3">
         <div class="card-body">
-          <p class="card-text">{{item}}</p>
+          <p class="card-text">{{item.name}}</p>
         </div>
       </div>
     </div>
