--- a/src/app/pages/mods/mods.component.css
+++ b/src/app/pages/mods/mods.component.css
@@ -16,7 +16,7 @@
 img {
   max-height: 100%;
   max-width: 100%;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   bottom: 0;
   left: 0;
